# rustapp-defaults

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
src/: main.rs
