[package]
name = "rustapitest"
version = "0.1.0"
authors = ["Tristram Oaten <tristram@oaten.name>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.3", features = ["full"] }
mini-redis = "0.3"
